plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.4.10'
    id "org.sonarqube" version "2.7"
    id "jacoco"
}

group 'com.reedelk'
version '1.0.0'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    compile group: 'org.json', name: 'json', version: '20190722'
    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.14.0'
    compile group: 'io.github.classgraph', name: 'classgraph', version: '4.8.25'
    compile group: 'com.reedelk', name: 'runtime-api', version: '1.0.0-SNAPSHOT'
    compile group: 'com.reedelk', name: 'runtime-commons', version: '1.0.0-SNAPSHOT'
    compile group: 'com.reedelk', name: 'runtime-rest-api', version: '1.0.0-SNAPSHOT'
    compile group: 'com.reedelk', name: 'runtime-components', version: '1.0.0-SNAPSHOT'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.12.2'
    testCompile group: 'org.skyscreamer', name: 'jsonassert', version: '1.5.0'
    testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '2.25.1'
}

test {
    useJUnitPlatform()
}

intellij {
    plugins = ["maven"]
    version '2018.3'
    type 'IU'
}

jacoco {
    toolVersion = "0.8.5"
}

patchPluginXml {
    changeNotes """
      Reedelk ESB IntelliJ designer<br>
      <em>First Release</em>"""

    sinceBuild '183'
    untilBuild '194'
}